--- a/mongoid.config
+++ b/mongoid.config
@@ -1,6 +1,14 @@
 development:
   clients:
     default:
-      database: booklist_dev
+      database: rubyapp
       hosts:
-        - localhost:27017
+        - ds163699.mlab.com:63699
+      options:
+        # The name of the user for authentication.
+        user: "ldeveloperl"
+        # The password of the user for authentication.
+        password: "lanet1"
+
+
+
